# ya-rust-sprint-1

./: .gitignore  Cargo.toml  README.md  ReadMe.md
.cargo/: config.toml
.github/workflows/: rust-ci.yml
cli-comparer/: Cargo.toml  ReadMe.md
cli-comparer/src/: main.rs
cli-converter/: Cargo.toml  ReadMe.md
cli-converter/src/: main.rs
examples/: example_bin_parser.rs  example_csv_parser.rs  test_bin_parser.rs  test_csv_parser.rs  test_txt_parser.rs
parser/: Cargo.toml  ReadMe.md
parser/examples/: example_bin_parser.rs  example_csv_parser.rs  example_txt_parser.rs
parser/src/: bin_format.rs  csv_format.rs  error.rs  lib.rs  txt_format.rs
src/: bin_format.rs  csv_format.rs  error.rs  lib.rs  main.rs  txt_format.rs
