[package]
name = "ya-rust-sprint-1"
version = "0.1.0"
edition = "2024"

[dependencies]
strum_macros = "0.27.2"
byteorder = "1.5.0"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["display"] }
clap = { version = "4.5.58", features = ["derive"] }
thiserror = "2.0.18"
