[package]
name = "parser"
version = "0.1.0"
edition = "2024"

[lib]
name = "parser"
path = "src/lib.rs"

[dependencies]
byteorder = "^1.5.0"
csv = "^1.4.0"
serde = { version = "^1.0.228", features = ["derive"] }
strum = { version = "^0.27.2", features = ["derive"] }
derive_more = { version = "^2.1.1", features = ["display"] }
thiserror = "^2.0.18"